--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -182,7 +182,7 @@ button:hover {
     padding: 0px;
     flex-basis: 50%;
     -webkit-flex-basis: 50%;
-    background: #d7a8cb;
+    background: #FFFFFF;
     padding: 100px 50px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
