--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -10,9 +10,9 @@ html {
 }
 
 body {
-    background-image: url('../../assets/images/background.jpg');
+    background-image: url('../../assets/images/temanall.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
 }
 
 * {
@@ -59,7 +59,9 @@ a {
 }
 
 img {
-    max-width: 100%;
+    height: 350px;
+    align-content: center;
+    width: auto; /* Menyesuaikan lebar secara otomatis untuk mempertahankan rasio aspek */
 }
 
 ul {
@@ -184,11 +186,15 @@ button:hover {
     -webkit-flex-basis: 50%;
     background: #FFFFFF;
     padding: 100px 50px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+    padding-left: 100px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgba(255, 255, 255, 0.1); /* Slight white tint with transparency */
+    backdrop-filter: blur(10px); /* Adjust blur level as needed */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .content-wthree {
@@ -198,8 +204,9 @@ button:hover {
     padding: 3em 3.5em;
     background: #fff;
     box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.1);
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+
 }
 
 .w3l-workinghny-form .logo {
