--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -120,12 +120,22 @@
   flex-direction: column;
 }
 
-#logo{
+#logo {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
   color: #000;
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 28px;
   font-weight: 700;
   margin-left: 5px;
+}
+
+#logo img {
+  margin-right: 10px; /* Jarak antara logo dan teks */
+  width: 45px;
+  height: 45px; 
+  filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.1));
 }
 
 body {
@@ -2881,6 +2891,7 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
+  border-radius: 13px;
   --bs-btn-color: #fff;
   --bs-btn-bg: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3774,9 +3785,9 @@ textarea.form-control-lg {
 
 .navbar {
   --bs-navbar-padding-x: 0;
-  --bs-navbar-padding-y: 0.5rem;
+  --bs-navbar-padding-y: 0.82rem;
   --bs-navbar-color: rgba(0, 0, 0, 0.55);
-  --bs-navbar-hover-color: rgba(0, 0, 0, 0.7);
+  --bs-navbar-hover-color: rgba(157, 0, 255, 0.7);
   --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
   --bs-navbar-active-color: rgba(0, 0, 0, 0.9);
   --bs-navbar-brand-padding-y: 0.3125rem;
@@ -4830,11 +4841,11 @@ textarea.form-control-lg {
 .list-group {
   --bs-list-group-color: #212529;
   --bs-list-group-bg: #fff;
-  --bs-list-group-border-color: rgba(0, 0, 0, 0.125);
-  --bs-list-group-border-width: 1px;
-  --bs-list-group-border-radius: 0.375rem;
-  --bs-list-group-item-padding-x: 1rem;
-  --bs-list-group-item-padding-y: 0.5rem;
+  --bs-list-group-border-color: #F449F4;
+  --bs-list-group-border-width: 3px;
+  --bs-list-group-border-radius: 20px;
+  --bs-list-group-item-padding-x: rem;
+  --bs-list-group-item-padding-y: 0rem;
   --bs-list-group-action-color: #495057;
   --bs-list-group-action-hover-color: #495057;
   --bs-list-group-action-hover-bg: #f8f9fa;
@@ -4849,7 +4860,6 @@ textarea.form-control-lg {
   flex-direction: column;
   padding-left: 0;
   margin-bottom: 0;
-  border-radius: var(--bs-list-group-border-radius);
 }
 
 .list-group-numbered {
@@ -4881,10 +4891,10 @@ textarea.form-control-lg {
   position: relative;
   display: block;
   padding: var(--bs-list-group-item-padding-y) var(--bs-list-group-item-padding-x);
-  color: var(--bs-list-group-color);
+  color: var(--bs-list);
   text-decoration: none;
-  background-color: var(--bs-list-group-bg);
-  border: var(--bs-list-group-border-width) solid var(--bs-list-group-border-color);
+  background-color: #fff;
+  border: solid var(--bs-list-group-border-color);
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -4893,6 +4903,7 @@ textarea.form-control-lg {
 .list-group-item:last-child {
   border-bottom-right-radius: inherit;
   border-bottom-left-radius: inherit;
+  border-bottom-width: 2px;
 }
 .list-group-item.disabled, .list-group-item:disabled {
   color: var(--bs-list-group-disabled-color);
@@ -4906,7 +4917,7 @@ textarea.form-control-lg {
   border-color: var(--bs-list-group-active-border-color);
 }
 .list-group-item + .list-group-item {
-  border-top-width: 0;
+  border-top-width: 3px;
 }
 .list-group-item + .list-group-item.active {
   margin-top: calc(-1 * var(--bs-list-group-border-width));
@@ -5057,13 +5068,15 @@ textarea.form-control-lg {
   }
 }
 .list-group-flush {
-  border-radius: 0;
+  gap: 10px;
+  margin-top: 20px;
+  margin-left: 5px;
 }
 .list-group-flush > .list-group-item {
-  border-width: 0 0 var(--bs-list-group-border-width);
+  border-radius: 30px;
 }
 .list-group-flush > .list-group-item:last-child {
-  border-bottom-width: 0;
+  border-bottom-width: 3px;
 }
 
 .list-group-item-primary {
@@ -7195,7 +7208,7 @@ textarea.form-control-lg {
 }
 
 .border-end {
-  border-right: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
+  box-shadow: 0 4px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .border-end-0 {
@@ -7203,7 +7216,7 @@ textarea.form-control-lg {
 }
 
 .border-bottom {
-  border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
 }
 
 .border-bottom-0 {
@@ -10873,21 +10886,24 @@ textarea.form-control-lg {
 }
 #wrapper {
   overflow-x: hidden;
+
 }
 
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
   transition: margin 0.25s ease-out;
+  background: #fff;
 }
 
 #sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
+  padding: 0.1rem 1.25rem;
   font-size: 1.2rem;
 }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
+  width: 14.5rem;
+
 }
 
 #page-content-wrapper {
