--- a/styles/css/dashboard.css
+++ b/styles/css/dashboard.css
@@ -57,9 +57,10 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    text-decoration: none;
 }
 
-.sunting{
+.sunting {
     position: relative;
     width: 160px;
     height: 48px;
@@ -72,9 +73,11 @@ body {
     cursor: pointer;
     overflow: hidden;
     text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 20px;
 }
 
-span{
+.sunting span {
     background: black;
     height: 100%;
     width: 0;
@@ -96,7 +99,7 @@ span{
     background-color: #000;
     transition: 0.5s;
 }
-  
+
 .sunting-profil:hover {
     color: #fff;
     background-color: #000;
@@ -105,15 +108,22 @@ span{
 
 .keluar:hover a {
     color: #fff;
-  }
-  
-  .sunting-profil:hover a {
+    text-decoration: none;
+}
+
+.sunting-profil:hover a {
     color: #fff;
-  }
+    text-decoration: none;
+}
 
 button:hover span {
     width: 100%;
     color: white;
+}
+
+a {
+    color: black;
+    text-decoration: none;
 }
 
 .maps {
